feat: add reply api (#46)
